Add restart policies

--- a/docker-compose/mainnet/luna.yml
+++ b/docker-compose/mainnet/luna.yml
@@ -8,6 +8,7 @@ services:
       NET: columbus-5
     volumes:
       - ${BLOCKCHAIN_PATH}/terrad:/root/.terra
+    restart: on-failure
 
 networks:
   default:
