--- a/docker-compose/testnet/bch.yml
+++ b/docker-compose/testnet/bch.yml
@@ -18,13 +18,15 @@ services:
       NET: testnet
     volumes:
       - ${BLOCKCHAIN_PATH}/electrumx:/data
+    restart: on-failure
 
-  electrum-testnet:
+  electron-testnet:
     build: ../../packages/nodechain-electron-cash
-    image: electrum
+    image: electron
     environment:
       NETWORK: ${NETWORK}
       TESTNET: 1
+    restart: on-failure
 
 networks:
   default:
