Admin endpoints with authentication

--- a/Connector/Dockerfile
+++ b/Connector/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./Connector/requirements.txt
 RUN pip3 install -r Connector/requirements.txt
 
+ENV API_KEY=$API_KEY
+
 COPY . ./Connector
 
 EXPOSE 80 28332
