--- a/scripts/defaultConfig.json
+++ b/scripts/defaultConfig.json
@@ -8,7 +8,8 @@
           "electrumRpcEndpoint": "http://swapper:swapper@electrum-regtest:30000",
           "bitcoincoreZmqEndpoint": "tcp://bitcoincore-regtest:28332",
           "bitcoinAddressCallbackHost": "http://connector:80",
-          "electrsEndpoint": "electrs-regtest:60401:t"
+          "electrsHost": "electrs-regtest",
+          "electrsPort": "60401"
         }
       },
       "testnet": {
@@ -17,7 +18,8 @@
           "electrumRpcEndpoint": "http://swapper:swapper@electrum-testnet:30000",
           "bitcoincoreZmqEndpoint": "tcp://bitcoincore-testnet:28332",
           "bitcoinAddressCallbackHost": "http://connector:80",
-          "electrsEndpoint": "electrs-testnet:60001:t"
+          "electrsHost": "electrs-testnet",
+          "electrsPort": "60001"
         }
       },
       "mainnet": {
@@ -26,7 +28,8 @@
           "electrumRpcEndpoint": "http://swapper:swapper@electrum-mainnet:30000",
           "bitcoincoreZmqEndpoint": "tcp://bitcoincore-mainnet:28332",
           "bitcoinAddressCallbackHost": "http://connector:80",
-          "electrsEndpoint": "electrs-mainnet:50001:t"
+          "electrsHost": "electrs-mainnet",
+          "electrsPort": "50001"
         }
       }
     }
