--- a/docker-compose/mainnet/bch.yml
+++ b/docker-compose/mainnet/bch.yml
@@ -10,7 +10,7 @@ services:
       interval: 5s
       timeout: 15s
       retries: 5
-    restart: on-failure
+    restart: on-failure:5
 
   electrumx-mainnet:
     image: lukechilds/electrumx
@@ -23,14 +23,14 @@ services:
       COST_HARD_LIMIT: 0
     volumes:
       - ${BLOCKCHAIN_PATH}/electrumx:/data
-    restart: on-failure
+    restart: on-failure:5
 
   electron-mainnet:
     build: ../../packages/nodechain-electron-cash
     image: electron
     environment:
       NETWORK: ${NETWORK}
-    restart: on-failure
+    restart: on-failure:5
 
 networks:
   default:
