--- a/docker-compose/regtest/eth.yml
+++ b/docker-compose/regtest/eth.yml
@@ -10,7 +10,7 @@ services:
       interval: 10s
       timeout: 15s
       retries: 10
-    restart: on-failure
+    restart: on-failure:5
 
   postgres-regtest:
     build: ../../packages/nodechain-ethereum-indexer
@@ -26,7 +26,7 @@ services:
       interval: 5s
       timeout: 15s
       retries: 5
-    restart: on-failure
+    restart: on-failure:5
   
   postgrest-regtest:
     image: postgrest/postgrest
@@ -37,7 +37,7 @@ services:
     depends_on:
       postgres-regtest:
         condition: service_healthy
-    restart: on-failure
+    restart: on-failure:5
 
   synchroniser-regtest:
     image: nodechain/eth-transactions-indexer
@@ -52,4 +52,4 @@ services:
         condition: service_healthy
       postgres-regtest:
         condition: service_healthy
-    restart: on-failure
+    restart: on-failure:5
