--- a/docker-compose/testnet/btc.yml
+++ b/docker-compose/testnet/btc.yml
@@ -20,7 +20,7 @@ services:
       interval: 5s
       timeout: 15s
       retries: 5
-    restart: on-failure
+    restart: on-failure:5
 
   electrs-testnet:
     build: ../../packages/nodechain-electrs
@@ -37,7 +37,7 @@ services:
     depends_on:
       bitcoincore-testnet:
         condition: service_healthy
-    restart: on-failure
+    restart: on-failure:5
 
 
   electrum-testnet:
@@ -48,7 +48,7 @@ services:
       SERVER: electrs-testnet:60001:t
     depends_on:
       - electrs-testnet
-    restart: on-failure
+    restart: on-failure:5
 
 networks:
   default:
