--- a/docker-compose/testnet/luna.yml
+++ b/docker-compose/testnet/luna.yml
@@ -8,7 +8,7 @@ services:
       NET: bombay-12
     volumes:
       - ${BLOCKCHAIN_PATH}/terrad:/root/.terra
-    restart: on-failure
+    restart: on-failure:5
 
 networks:
   default:
