--- a/docker-compose/testnet/btc.yml
+++ b/docker-compose/testnet/btc.yml
@@ -13,6 +13,7 @@ services:
       -testnet
       -rpcport=8332
       -zmqpubhashblock=tcp://0.0.0.0:28332
+      -rpcthreads=128
     volumes:
       - ${BLOCKCHAIN_PATH}/bitcoincore:/home/bitcoin/.bitcoin
     healthcheck:
