--- a/docker-compose/mainnet/eth.yml
+++ b/docker-compose/mainnet/eth.yml
@@ -4,13 +4,15 @@ services:
     image: ethereum/client-go:stable
     command: 
       --http 
-      --http.addr=ethereumgo-mainnet 
+      --http.addr=ethereumgo-mainnet
+      --http.api="eth,net,engine,admin"
       --cache=1024 
       --http.port=8545 
       --syncmode=snap 
       --gcmode=archive 
       --ws 
-      --ws.addr=ethereumgo-mainnet 
+      --ws.addr=ethereumgo-mainnet
+      --ws.api="eth,net,engine,admin"
       --ws.port=8546 
       --ws.origins=connector 
       --http.vhosts=ethereumgo-mainnet 
