(Logger) Connector accepts verbose env variable from script

--- a/docker-compose/connector.yml
+++ b/docker-compose/connector.yml
@@ -5,6 +5,7 @@ services:
     image: connector
     environment:
       API_KEY: ${API_KEY}
+      VERBOSE: ${VERBOSE}
 
   nginx:
     image: nginx
